--- a/README.org
+++ b/README.org
@@ -2,6 +2,5 @@
 #+AUTHOR: Mathieu Basille
 #+EMAIL: basille@ufl.edu
 
-* Emacs literate configuration
 
-All explanations are in the [init file](init.org).
+All explanations are in the [init file](/init.org).
